--- a/_notebooks/2024-03-19-Student-Lessons-1.ipynb
+++ b/_notebooks/2024-03-19-Student-Lessons-1.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 3: \n",
+    "## Question 3: Array (Unit 6)\n",
     "Situation: You are developing a student management system where you need to store and analyze the grades of students in a class.\n",
     "\n",
     "**(a) Define an array in Java. Explain its significance and usefulness in programming.**\n",
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 4:\n",
+    "## Question 4: Math Class (Unit 2)\n",
     "Situation: You are developing a scientific calculator application where users need to perform various mathematical operations.\n",
     "\n",
     "**(a) Discuss the purpose and utility of the Math class in Java programming. Provide examples of at least three methods provided by the Math class and explain their usage.**\n",
