--- a/_notebooks/2024-03-19-Student-Lessons-1.ipynb
+++ b/_notebooks/2024-03-19-Student-Lessons-1.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -157,10 +157,10 @@
    "source": [
     "public class GradeAnalyzer {\n",
     "    \n",
-    "    public double calculateAverageGrade(int[] grades) { // calculate average grade method\n",
+    "    public double calculateAverageGrade(int[] grades) { // calculate average grade method using the array of grades\n",
     "        int sum = 0; // setting inital sum to 0\n",
     "        \n",
-    "        for (int grade : grades) { // for grade in the array grades, add the sum with the grade and go to the next\n",
+    "        for (int grade : grades) { // iterating that for grade in the array grades, add the sum with the grade and go to the next\n",
     "            sum += grade;\n",
     "        }\n",
     "        \n",
@@ -168,11 +168,11 @@
     "        return average;\n",
     "    }\n",
     "    \n",
-    "    public static void main(String[] args) { // testing data\n",
+    "    public static void main(String[] args) { // main method for testing data\n",
     "        int[] studentGrades = {85, 90, 75, 95, 80};\n",
     "\n",
-    "        GradeAnalyzer analyzer = new GradeAnalyzer(); // calling method \n",
-    "        double averageGrade = analyzer.calculateAverageGrade(studentGrades);\n",
+    "        GradeAnalyzer analyzer = new GradeAnalyzer(); // creates new instance for the main class\n",
+    "        double averageGrade = analyzer.calculateAverageGrade(studentGrades); // calling method \n",
     "        \n",
     "        System.out.println(\"Average Grade: \" + averageGrade);\n",
     "    }\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -229,12 +229,12 @@
     "        return squareRoot;\n",
     "    }\n",
     "    \n",
-    "    public static void main(String[] args) { // testing data\n",
+    "    public static void main(String[] args) { // main method to test the data with \n",
     "\n",
     "        double number = 400;\n",
     "\n",
-    "        ScientificCalculator calculator = new ScientificCalculator(); // calling method for the calculator\n",
-    "        double squareRoot = calculator.calculateSquareRoot(number);\n",
+    "        ScientificCalculator calculator = new ScientificCalculator(); // creating an instance of the class\n",
+    "        double squareRoot = calculator.calculateSquareRoot(number); // calling method for the calculator\n",
     "        \n",
     "        System.out.println(\"Square root of \" + number + \" is: \" + squareRoot);\n",
     "    }\n",
