fixing my blogs (was broken)

--- a/_notebooks/2024-01-08-LOGIN-LESSON.ipynb
+++ b/_notebooks/2024-01-08-LOGIN-LESSON.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "layout: base\n",
+    "layout: post\n",
     "title: Login Lesson\n",
     "description: SASS + JavaScript Login/Signup pages\n",
     "author: Finn C, Theo H, Justin N\n",
