--- a/_notebooks/2024-03-12-ValueReferenceTypes.ipynb
+++ b/_notebooks/2024-03-12-ValueReferenceTypes.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "toc: true\n",
     "comments: true\n",
-    "layout: notebook\n",
+    "layout: post\n",
     "title: The difference between Value and Reference Types \n",
     "description: The difference in the application and use of Value and Reference types in Java.\n",
     "authors: Vinay, Tirth, Haseeb, Derrick\n",
