--- a/_notebooks/2024-01-23-Thymeleaf.ipynb
+++ b/_notebooks/2024-01-23-Thymeleaf.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "toc: true\n",
     "comments: true\n",
-    "layout: notebook\n",
+    "layout: post\n",
     "title: Thymeleaf Lesson\n",
     "type: hacks\n",
     "---"
