--- a/_notebooks/2024-04-22-unit-7-student.ipynb
+++ b/_notebooks/2024-04-22-unit-7-student.ipynb
@@ -54,6 +54,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Arraylist doesnt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In order to use the ArrayList class, the ArrayList class needs to be imported from the java util package. This can be done by writing import java.util.ArrayList at the top of the class file."
    ]
   },
@@ -74,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ArrayList objects are created in the same fashion as other object classes. The primary difference with ArrayLists is that the element type of the ArrayList must be specified using angled bracket <>. In this example, E represents the data type that will be used in the ArrayList. This notation is called the ________ type.\n",
+    "ArrayList objects are created in the same fashion as other object classes. The primary difference with ArrayLists is that the element type of the ArrayList must be specified using angled bracket <>. In this example, E represents the data type that will be used in the ArrayList. This notation is called the **generic** type.\n",
     "</br>\n",
     "This can be replaced by an object data type:"
    ]
@@ -554,7 +561,7 @@
     "\n",
     "- Deleting elements during a traversal of an Arraylist requires special techniques to avoid skiping elements.\n",
     "\n",
-    "- The indicies of an Arraylist start at ___; If you try to use any value lower than 0, you will get an ______ error"
+    "- The indicies of an Arraylist start at 0; If you try to use any value lower than 0, you will get an array index exception error"
    ]
   },
   {
