searching lesson hacks completed

--- a/_notebooks/2024-04-22-Searching.ipynb
+++ b/_notebooks/2024-04-22-Searching.ipynb
@@ -52,16 +52,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "// Write the answer here"
+    "Arrays would be the answer, this would be because the for conditional uses `items.length`, the way that you determine the number of elements in an Array. So we would use the code segment on the left"
    ]
   },
   {
@@ -73,16 +67,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "// Write the answer here"
+    "This question uses ArrayList, evident through the usage of `items.size` instead of `.length` and so we would use the code segment on the right for this question"
    ]
   },
   {
@@ -257,12 +245,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element found at index: 9\n",
+      "\n",
+      "Number of Iterations: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class NumbersLinearSearch {\n",
+    "    static int iterations = 0; \n",
+    "\n",
+    "    public static int numberLinearSearch(ArrayList<Integer> list, Integer target) {\n",
+    "        for (int i = 0; i < list.size(); i++, iterations++) {\n",
+    "\n",
+    "            if (list.get(i).equals(target)) {\n",
+    "                return i;\n",
+    "            }\n",
+    "        }\n",
+    "        return -1;\n",
+    "    }\n",
+    "\n",
+    "    public static void test(Integer[] args) {\n",
+    "        ArrayList<Integer> numberList = new ArrayList<>(Arrays.asList(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15));\n",
+    "\n",
+    "        int index = NumbersLinearSearch.numberLinearSearch(numberList, 10);\n",
+    "        if (index != -1) {\n",
+    "            System.out.println(\"Element found at index: \" + index);\n",
+    "        } else {\n",
+    "            System.out.println(\"Element not found\");\n",
+    "        }\n",
+    "        System.out.println(\"\\nNumber of Iterations: \" + iterations);\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "NumbersLinearSearch.test(null)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2. When is it preferred to use linear search over binary search?\n",
     "\n",
-    "(answer here)"
+    "Linear search would be optimal for when you need a value from the first few values in an Array List and the number of values that are optimal increases as the array list size also increase."
    ]
   },
   {
@@ -285,7 +325,11 @@
     "\n",
     "<h4> Popcorn Hack </h4>\n",
     "\n",
-    "What are some examples of algorithms that would be useful to have recursion? "
+    "What are some examples of algorithms that would be useful to have recursion?\n",
+    "\n",
+    "Sorting Algorithms\n",
+    "Fibonacci \n",
+    "Factorials"
    ]
   },
   {
@@ -382,7 +426,9 @@
    "source": [
     "<h4> Popcorn Hack </h4>\n",
     "\n",
-    "What iteration did it find f?"
+    "What iteration did it find f?\n",
+    "\n",
+    "2nd Iteration"
    ]
   },
   {
@@ -459,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -470,10 +516,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Initial Garage:\n",
+      "\n",
       "Ferrari: 2021 Ferrari F8 Tributo\n",
       "Porsche: 2021 Porsche 911 Turbo S\n",
       "Lambo: 2021 Lamborghini Aventador\n",
-      "McLaren: 2021 McLaren 720S\n"
+      "McLaren: 2021 McLaren 720S\n",
+      "\n",
+      "Removed: McLaren, 2021 McLaren 720S\n",
+      "\n",
+      "Updated Garage:\n",
+      "\n",
+      "Ferrari: 2021 Ferrari F8 Tributo\n",
+      "Porsche: 2021 Porsche 911 Turbo S\n",
+      "Lambo: 2021 Lamborghini Aventador\n"
      ]
     }
    ],
@@ -589,16 +645,19 @@
     "\n",
     "    public static void main(String[] args) {\n",
     "        Garage myGarage = new Garage();\n",
+    "        System.out.println(\"Initial Garage:\\n\");\n",
     "        myGarage.printGarage();\n",
     "\n",
     "        // Removing a car from the garage tester code\n",
-    "        // String key = \"Lambo\";\n",
-    "        // Car car = garage.remove(key);\n",
-    "        // if (car == null) {\n",
-    "        //     System.out.println(key + \" not found\");\n",
-    "        // } else {\n",
-    "        //     System.out.println(\"Removed: \" + key + \", \" + car);\n",
-    "        // }\n",
+    "        String key = \"McLaren\";\n",
+    "        Car car = garage.remove(key);\n",
+    "        if (car == null) {\n",
+    "        System.out.println(key + \" not found\");\n",
+    "        } else {\n",
+    "        System.out.println(\"\\nRemoved: \" + key + \", \" + car);\n",
+    "        }\n",
+    "        System.out.println(\"\\nUpdated Garage:\\n\");\n",
+    "        myGarage.printGarage();\n",
     "    }\n",
     "}\n",
     "\n",
@@ -690,7 +749,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "20.0.2+9-78"
+   "version": "17.0.9+9-Ubuntu-120.04"
   }
  },
  "nbformat": 4,
