--- a/_notebooks/2024-04-21-workshopfour.ipynb
+++ b/_notebooks/2024-04-21-workshopfour.ipynb
@@ -75,7 +75,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Seasons {\n",
@@ -140,7 +144,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Seasons {\n",
@@ -176,7 +184,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class TrimesterGrades {\n",
@@ -203,37 +215,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41mTrimesterGrades.main\u001b[0m\u001b[1m\u001b[30m(null);\u001b[0m",
-      "\u001b[1m\u001b[31mnon-static method main(int[]) cannot be referenced from a static context\u001b[0m",
-      ""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67\n",
+      "90\n"
      ]
     }
    ],
    "source": [
     "public class TrimesterGrades {\n",
     "\n",
-    "    private int[][] trimesterGrades = {\n",
+    "    private static int[][] trimesterGrades = {\n",
     "        {85, 90, 78, 92, 99}, // tri 1\n",
     "        {92, 88, 91, 97, 80}, // tri 2\n",
     "        {79, 85, 83, 95, 67}  // tri 3\n",
     "    };\n",
     "\n",
-    "    public void main(int[] args) {\n",
-    "        System.out.println(trimesterGrades[2][5]);\n",
-    "        trimesterGrades[2][5] = 90;  \n",
-    "        System.out.println(trimesterGrades[2][5]);\n",
+    "    public static void main(String[] args) {\n",
+    "        System.out.println(trimesterGrades[2][4]); // printing 67\n",
+    "        trimesterGrades[2][4] = 90;  // assigning 90 to where 67 is  \n",
+    "        System.out.println(trimesterGrades[2][4]); // printing the updated value\n",
     "    }\n",
     "}\n",
     "\n",
-    "TrimesterGrades.main(null);"
+    "TrimesterGrades.main(null)\n"
    ]
   },
   {
@@ -279,7 +293,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.9+9-Ubuntu-120.04"
   },
