--- a/_notebooks/2024-04-22-unit-7-student.ipynb
+++ b/_notebooks/2024-04-22-unit-7-student.ipynb
@@ -67,7 +67,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "import java.util.ArrayList;  // Import the ArrayList class\n",
@@ -89,7 +93,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "ArrayList<E> list = new ArrayList<E>();"
@@ -105,7 +113,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "ArrayList list = new ArrayList();"
@@ -122,16 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "public class Student\n",
-    "{\n",
-    "    public static void main(String[] args)\n",
-    "    {\n",
-    "        // Needs to define on left side, right side optional\n",
-    "        \n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class Student {\n",
+    "    public static void main(String[] args) {\n",
+    "        ArrayList<String> studentName = new ArrayList<>(); \n",
+    "        ArrayList<Integer> studentAge = new ArrayList<>();\n",
     "    }\n",
     "}"
    ]
@@ -186,7 +202,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -216,7 +236,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -246,8 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "ename": "CompilationException",
@@ -284,7 +312,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -315,7 +347,7 @@
    "source": [
     "**Question:** Why does this code work?\n",
     "\n",
-    "adds correct data type into string arraylist"
+    "adds correct data type (String) into string arraylist instead of other types of data types "
    ]
   },
   {
@@ -330,7 +362,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -359,7 +395,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -388,7 +428,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -422,7 +466,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -457,7 +505,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -523,20 +575,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Items added: David (Age: 21), Emily (Age: 22)\n",
+      "Item removed: Max (Age: 18)\n",
+      "Item replaced: Eshaani with Fiona (Age: 23)\n",
+      "First student: Jishnu (Age: 18)\n",
+      "Last student: Nathan (Age: 18)\n",
+      "List size: 4\n"
+     ]
+    }
+   ],
    "source": [
-    "public class HackHelper {\n",
-    "    private String manipulateList(ArrayList<Integer> array) {\n",
-    "        return null;\n",
-    "    }\n",
+    "import java.util.ArrayList;\n",
     "\n",
+    "public class HackHelper {\n",
     "    public static void main(String[] args) {\n",
+    "        ArrayList<String> studentNames = new ArrayList<>();\n",
+    "        ArrayList<Integer> studentAges = new ArrayList<>();\n",
+    "        \n",
+    "        studentNames.add(\"Jishnu\");\n",
+    "        studentNames.add(\"Max\");\n",
+    "        studentNames.add(\"Alex\");\n",
+    "        \n",
+    "        studentAges.add(18);\n",
+    "        studentAges.add(18);\n",
+    "        studentAges.add(17);\n",
+    "        \n",
+    "        // adds 2 students to the list\n",
+    "        studentNames.add(\"David\");\n",
+    "        studentAges.add(17);\n",
+    "        studentNames.add(\"Nathan\");\n",
+    "        studentAges.add(18);\n",
+    "        \n",
+    "        // removes a student\n",
+    "        int removedIndex = 1;\n",
+    "        String removedName = studentNames.remove(removedIndex);\n",
+    "        int removedAge = studentAges.remove(removedIndex);\n",
+    "        \n",
+    "        // replaces a student\n",
+    "        int replacedIndex = 1;\n",
+    "        studentNames.set(replacedIndex, \"Eshaani\");\n",
+    "        studentAges.set(replacedIndex, 18);\n",
+    "        \n",
+    "        // getting first and last indexes\n",
+    "        String firstStudent = studentNames.get(0);\n",
+    "        int firstStudentAge = studentAges.get(0);\n",
+    "        String lastStudent = studentNames.get(studentNames.size() - 1);\n",
+    "        int lastStudentAge = studentAges.get(studentAges.size() - 1);\n",
+    "        \n",
+    "        // reuurning everything in one String\n",
+    "        String result = \"Items added: David (Age: 21), Emily (Age: 22)\\n\";\n",
+    "        result += \"Item removed: \" + removedName + \" (Age: \" + removedAge + \")\\n\";\n",
+    "        result += \"Item replaced: \" + studentNames.get(replacedIndex) + \" with Fiona (Age: 23)\\n\";\n",
+    "        result += \"First student: \" + firstStudent + \" (Age: \" + firstStudentAge + \")\\n\";\n",
+    "        result += \"Last student: \" + lastStudent + \" (Age: \" + lastStudentAge + \")\\n\";\n",
+    "        result += \"List size: \" + studentNames.size();\n",
+    "        \n",
+    "        System.out.println(result);\n",
     "    }\n",
     "}\n",
     "\n",
-    "HackHelper.main(null);"
+    "HackHelper.main(null)\n"
    ]
   },
   {
@@ -567,7 +676,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "import java.util.ArrayList;\n",
@@ -715,13 +828,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Example 1 - I think that the code will iterate through the array list, recording the highest value it finds\n",
+    "\n",
+    "Example 2 - I think that the code will iterate through the array list, recording the lowest value it finds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Let's Look at an Example (Example 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -753,7 +879,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "// ArrayListExample.main(null);"
+    "ArrayListExample.main(null);"
    ]
   },
   {
@@ -766,7 +892,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class ArrayListExample {\n",
@@ -817,18 +947,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value: 420\n"
+     ]
+    }
+   ],
    "source": [
     "public class ArrayListExample {\n",
     "    private int findMin(int[] values) {\n",
-    "        //int min = Integer.MAX_VALUE;\n",
-    "        //for (int currentValue : values) {\n",
-    "        //    if (currentValue < min) {\n",
-    "        //        min = currentValue;\n",
-    "        //    }\n",
-    "        //}\n",
+    "        int min = Integer.MAX_VALUE;\n",
+    "        for (int currentValue : values) {\n",
+    "           if (currentValue < min) {\n",
+    "               min = currentValue;\n",
+    "           }\n",
+    "        }\n",
     "        return min;\n",
     "    }\n",
     "\n",
@@ -852,18 +994,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value: 420\n"
+     ]
+    }
+   ],
    "source": [
     "public class ArrayListExample {\n",
     "    private int findMin(ArrayList<Integer> values) {\n",
-    "        //int min = Integer.MAX_VALUE;\n",
-    "        //for (int currentValue : values) {\n",
-    "        //    if (currentValue < min) {\n",
-    "        //        min = currentValue;\n",
-    "        //    }\n",
-    "        //}\n",
+    "        int min = Integer.MAX_VALUE;\n",
+    "        for (int currentValue : values) {\n",
+    "           if (currentValue < min) {\n",
+    "               min = currentValue;\n",
+    "           }\n",
+    "        }\n",
     "        return min;\n",
     "    }\n",
     "\n",
@@ -894,11 +1048,15 @@
     "- Answer the questions: \n",
     "    * Look back at the examples. What's similar? What's different?\n",
     "\n",
+    "    The most obvious difference between the two methods shown above for each eaxample is that the arrayList method isn't predetermined size and we adding elements into it, some similarities though are both use pretty similar iterations to find the max/min values and have minor changes inbetween them \n",
+    "\n",
     "    * Why do we use `ArrayList`? Why not just regular lists?\n",
     "\n",
-    "    Regular lists have fixed size in Java.\n",
+    "    Regular lists have fixed size in Java bu the ArrayList can be dynamic and thus be expanded or reduced \n",
     "\n",
     "- Demonstrate at least two `ArrayList` methods that aren't `ArrayList<>.size()` and `ArrayList<>.get()`.\n",
+    "\n",
+    "ArrayList<>.remove and Arraylist<>.clear\n",
     "\n",
     "- Write the method `findSum()` using the Hack Helper and incorporating `ArrayList`."
    ]
@@ -912,21 +1070,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "Sum of numbers: 316\n",
+      "ArrayList after removing an element: [0, 1, 2, 5, 8]\n",
+      "ArrayList after clearing: []\n"
      ]
     }
    ],
    "source": [
+    "import java.util.ArrayList;\n",
+    "\n",
     "public class ArrayListHacks {\n",
+    "\n",
     "    private int findSum(ArrayList<Integer> values) {\n",
-    "        return 0;\n",
+    "        int sum = 0;\n",
+    "        for (int value : values) {\n",
+    "            sum += value;\n",
+    "        }\n",
+    "        return sum;\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
@@ -939,11 +1110,19 @@
     "        nums.add(8);\n",
     "\n",
     "        ArrayListHacks hacks = new ArrayListHacks();\n",
-    "        System.out.println(hacks.findSum(nums));\n",
+    "        System.out.println(\"Sum of numbers: \" + hacks.findSum(nums));\n",
+    "\n",
+    "        // ArrayList<Integer>.remove\n",
+    "        nums.remove(3); // removes the element at index 3\n",
+    "        System.out.println(\"ArrayList after removing an element: \" + nums);\n",
+    "\n",
+    "        // ArrayList<Integer>.clear\n",
+    "        nums.clear();\n",
+    "        System.out.println(\"ArrayList after clearing: \" + nums);\n",
     "    }\n",
     "}\n",
     "\n",
-    "ArrayListHacks.main(null);"
+    "ArrayListHacks.main(null)"
    ]
   },
   {
@@ -992,7 +1171,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public int where(double magicNumber, ArrayList<Double> realNumbers, double delta)\n",
@@ -1019,7 +1202,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public int findTheWord(String searchedPhrase, ArrayList<Book> myBooks)\n",
@@ -1059,7 +1246,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1157,7 +1348,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "// with normal arrays\n",
@@ -1210,7 +1405,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "for (int outer = 1; outer < randomList.size(); outer++)\n",
@@ -1269,6 +1468,85 @@
     "\n",
     "## Complete the hacks in the cell below"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Student Grades: [85.5, 92.0, 78.3, 97.8, 88.6]\n",
+      "Student Grades after sequential removal: []\n",
+      "Student Grades after insertion sort: [78.3, 85.5, 88.6, 92.0, 97.8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class StudentGrades {\n",
+    "\n",
+    "    // remove an element of an ArrayList moving from the first index to the last index\n",
+    "    private static void removeElementSequentially(ArrayList<Double> grades) {\n",
+    "        int index = 0;\n",
+    "        while (index < grades.size()) {\n",
+    "            grades.remove(index); // Remove element at current index\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // insertion sort algo \n",
+    "    private static void insertionSort(ArrayList<Double> grades) {\n",
+    "\n",
+    "        for (int i = 1; i < grades.size(); i++) {\n",
+    "            double key = grades.get(i);\n",
+    "            int j = i - 1;\n",
+    "\n",
+    "            while (j >= 0 && grades.get(j) > key) {\n",
+    "                grades.set(j + 1, grades.get(j));\n",
+    "                j = j - 1;\n",
+    "            }\n",
+    "\n",
+    "            grades.set(j + 1, key);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        // intial array list\n",
+    "        ArrayList<Double> studentGrades = new ArrayList<>();\n",
+    "        studentGrades.add(85.5);\n",
+    "        studentGrades.add(92.0);\n",
+    "        studentGrades.add(78.3);\n",
+    "        studentGrades.add(97.8);\n",
+    "        studentGrades.add(88.6);\n",
+    "        \n",
+    "        System.out.println(\"Original Student Grades: \" + studentGrades);\n",
+    "\n",
+    "        // Remove elements sequentially from the ArrayList\n",
+    "        removeElementSequentially(studentGrades);\n",
+    "        System.out.println(\"Student Grades after sequential removal: \" + studentGrades);\n",
+    "\n",
+    "        // Re-populate the ArrayList with student grades\n",
+    "        studentGrades.add(85.5);\n",
+    "        studentGrades.add(92.0);\n",
+    "        studentGrades.add(78.3);\n",
+    "        studentGrades.add(97.8);\n",
+    "        studentGrades.add(88.6);\n",
+    "\n",
+    "        // sort \n",
+    "        insertionSort(studentGrades);\n",
+    "        System.out.println(\"Student Grades after insertion sort: \" + studentGrades);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "StudentGrades.main(null)"
+   ]
   }
  ],
  "metadata": {
@@ -1281,9 +1559,9 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
-   "version": "17.0.10+7-Ubuntu-122.04.1"
+   "version": "17.0.9+9-Ubuntu-120.04"
   },
   "orig_nbformat": 4
  },
