--- a/_notebooks/2024-04-19-ArrayLesson.ipynb
+++ b/_notebooks/2024-04-19-ArrayLesson.ipynb
@@ -341,17 +341,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "/** Returns the sum of the entries in the one-dimensional array arr.\n",
     " */ \n",
-    "public static int arraySum(int[] arr) "
+    "\n",
+    "int [] arr1 = {1, 3, 2, 7, 3};\n",
+    "\n",
+    "public static int arraySum(int[] arr) {\n",
+    "    int sum = 0;\n",
+    "    for (int elem : arr1) {\n",
+    "        sum += elem;\n",
+    "    }\n",
+    "return sum;\n",
+    "}\n",
+    "\n",
+    "arraySum(null)\n"
    ]
   },
   {
@@ -365,16 +387,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "32\n",
+      "28\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
-    "/** Returns a one-dimensional array in which the entry at index k is the sum of * the entries of row k of the two-dimensional array arr2D. */ \n",
-    "public static int[] rowSums(int[][] arr2D)"
+    "public class arr2Dsums {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] arr2D = {{1, 3, 2, 7, 3}, {10, 10, 4, 6, 2}, {5, 3, 5, 9, 6}, {7, 6, 4, 2, 1}};\n",
+    "        int[] result = rowSums(arr2D);\n",
+    "        for (int num : result) {\n",
+    "            System.out.println(num);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static int[] rowSums(int[][] arr2D) {\n",
+    "        if (arr2D == null) {\n",
+    "            return new int[0];\n",
+    "        }\n",
+    "        int[] sums = new int[arr2D.length];\n",
+    "        int rowNum = 0;\n",
+    "        for (int[] row : arr2D) {\n",
+    "            sums[rowNum] = arraySum(row);\n",
+    "            rowNum++;\n",
+    "        }\n",
+    "        return sums;\n",
+    "    }\n",
+    "\n",
+    "    public static int arraySum(int[] arr) {\n",
+    "        int sum = 0;\n",
+    "        for (int num : arr) {\n",
+    "            sum += num;\n",
+    "        }\n",
+    "        return sum;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "arr2Dsums.main(null)"
    ]
   },
   {
@@ -388,22 +451,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array 1: \n",
+      "16\n",
+      "32\n",
+      "28\n",
+      "20\n",
+      "\n",
+      "Array 2: \n",
+      "14\n",
+      "35\n",
+      "36\n",
+      "14\n",
+      "\n",
+      "Diverse: true\n"
+     ]
+    }
+   ],
    "source": [
-    "/** Returns true if all rows in arr2D have different row sums; * false otherwise. */ \n",
-    "public static boolean isDiverse(int[][] arr2D)"
+    "public class arr2Dsums {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] arr2D = {{1, 3, 2, 7, 3}, {10, 10, 4, 6, 2}, {5, 3, 5, 9, 6}, {7, 6, 4, 2, 1}};\n",
+    "        int[][] arr12D = {{1, 1, 5, 3, 4}, {12, 7, 6, 1, 9}, {8, 11, 10, 2, 5}, {3, 2, 3, 0, 6}};\n",
+    "        \n",
+    "        System.out.println(\"Array 1: \");\n",
+    "        int[] result = rowSums(arr2D);\n",
+    "        for (int num : result) {\n",
+    "            System.out.println(num);\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\"\\nArray 2: \");\n",
+    "        int[] result1 = rowSums(arr12D);\n",
+    "        for (int num : result1) {\n",
+    "            System.out.println(num);\n",
+    "        }\n",
+    "        \n",
+    "        boolean diverse = isDiverse(arr2D);\n",
+    "        System.out.println(\"\\nDiverse: \" + diverse);\n",
+    "    }\n",
+    "\n",
+    "    public static int[] rowSums(int[][] arr2D) {\n",
+    "        if (arr2D == null) {\n",
+    "            return new int[0];\n",
+    "        }\n",
+    "        int[] sums = new int[arr2D.length];\n",
+    "        int rowNum = 0;\n",
+    "        for (int[] row : arr2D) {\n",
+    "            sums[rowNum] = arraySum(row);\n",
+    "            rowNum++;\n",
+    "        }\n",
+    "        return sums;\n",
+    "    }\n",
+    "\n",
+    "    public static int arraySum(int[] arr) {\n",
+    "        int sum = 0;\n",
+    "        for (int num : arr) {\n",
+    "            sum += num;\n",
+    "        }\n",
+    "        return sum;\n",
+    "    }\n",
+    "\n",
+    "    public static boolean isDiverse(int[][] arr2D) {\n",
+    "        int[] sums = rowSums(arr2D);\n",
+    "        for (int i = 0; i < sums.length; i++) {\n",
+    "            for (int j = i + 1; j < sums.length; j++) {\n",
+    "                if (sums[i] == sums[j]) {\n",
+    "                    return false;\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        return true;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "arr2Dsums.main(null)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "17.0.9+9-Ubuntu-120.04"
   }
  },
  "nbformat": 4,
